# sportsbettingpredictor

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/agents/: data-pipeline.md  edge-detector.md  feature-engineer.md  model-trainer.md  paper-trader.md  position-sizer.md  risk-monitor.md
.claude/commands/: backtest.sh  check-opportunities.sh  generate-report.sh  train-models.sh  verify-data.sh
config/: database.yaml  models.yaml  risk_limits.yaml
scripts/: backfill_data.py  backtest.py  capture_odds.py  generate_report.py  paper_trade.py  picks.py  predict.py  scan_markets.py  schema.sql  settle_scores.py  setup_db.py  sync_schedule.py  train.py  verify_data.py
src/: __init__.py
src/execution/: __init__.py  order_manager.py  paper_trader.py  position_sizer.py
src/features/: __init__.py  market_features.py  player_metrics.py  situational.py  team_metrics.py
src/market/: __init__.py  clv_tracker.py  edge_calculator.py  line_movement.py
src/models/: __init__.py  backtester.py  base.py  elo.py  ensemble.py  gradient_boosting.py  regression.py
src/risk/: __init__.py  alerts.py  limits.py  portfolio.py
src/utils/: __init__.py  config.py  logging_config.py  validators.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py  test_database.py
tests/unit/: __init__.py  test_features.py  test_kalshi.py  test_sports.py
